@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-05
+2008-12-02 Andy Salnikov
+- in AppBase set global formatting strings for MsgLogger instead of just 
+  for the root logger
+
 Tag: V00-00-04
 2008-11-03 Andy Salnikov
 - added properties to all files here
